--- a/index.htm
+++ b/index.htm
@@ -38,6 +38,7 @@
                 -->
         </div>
     </div>
+       
     <div class="container body-content">
         
 
@@ -50,6 +51,65 @@
 заземления, сборка электрощитов, комплексная электрификация объекта под 
 ключ, видеодомофоны.</p>
 </div>
+
+<div class="row">
+    <div class="col-md-8">
+        <div class="panel-body">
+            aaaaaaaada safsdfasdf asdfasdf sd fasdf adfsafasdf as dfadsa af s
+            sadfa dfasfasd fasdfasdf aasdfsdf asdfasdf asdfasdfasdf fdsadf sdaf
+            sadf asdfd fasdfa asda adf sfa asdfasdf dfsasf asd asdf asdf asadf asdfas fd saf sdf adf aa
+            sdf asdf ad fsdf sdf sd dsa sadf asdf sdf
+        </div>
+    </div>
+    <div class="panel-group col-md-4" id="accordion">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a class="" data-toggle="collapse" data-parent="#accordion" href="#collapse1">
+                        Электромонтаж
+                    </a>
+                </h4>
+            </div>
+            <div style="height: auto;" id="collapse1" class="panel-collapse in">
+                <div class="panel-body">
+                    Быстро, качественно, недорого... выберите любые 2.
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse2">
+                        Хороший электромонтаж
+                    </a>
+                </h4>
+            </div>
+            <div style="height: 0px;" id="collapse2" class="panel-collapse collapse">
+                <div class="panel-body">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+                    minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                    commodo consequat.
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse3">
+                        Какая-то хрень на эльфийском...
+                    </a>
+                </h4>
+            </div>
+            <div style="height: 0px;" id="collapse3" class="panel-collapse collapse">
+                <div class="panel-body">
+                    Galadriel: I amar prestar aen, han mathon ne nen, han mathon ne chae a han noston ne 'wilith.
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 
         <hr>
@@ -67,7 +127,7 @@
 
 <!-- Visual Studio Browser Link -->
 <script type="application/json" id="__browserLink_initializationData">
-    {"appName":"Firefox","requestId":"ccc4068fe59a49e0a01ad98a1077501f"}
+    {"appName":"Firefox","requestId":"ae415f7093ec4be08104aaccd46ca5b3"}
 </script>
 <script type="text/javascript" src="Home%20Page_files/browserLink" async="async"></script>
 <!-- End Browser Link -->
