--- a/index.htm
+++ b/index.htm
@@ -44,12 +44,16 @@
 
 
 <div class="jumbotron">
-    <h1>МегаОм</h1>
-    <p class="lead">Электромонтажная компания.</p>
-    <p class="lead">Промышленный и гражданский электромонтаж, 
+    <div class="row">
+        <img src="image/MegaOm.png" class="col-md-4">
+        <div class="col-md-8">
+            <p class="lead">Электромонтажная компания.</p>
+            <p class="lead">Промышленный и гражданский электромонтаж, 
 электроизмерения, услуги электрика, молниезащита, монтаж контура 
 заземления, сборка электрощитов, комплексная электрификация объекта под 
 ключ, видеодомофоны.</p>
+        </div>
+    </div>
 </div>
 
 <div class="row">
@@ -65,12 +69,12 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a class="" data-toggle="collapse" data-parent="#accordion" href="#collapse1">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
                         Электромонтаж
                     </a>
                 </h4>
             </div>
-            <div style="height: auto;" id="collapse1" class="panel-collapse in">
+            <div id="collapse1" class="panel-collapse collapse in">
                 <div class="panel-body">
                     Быстро, качественно, недорого... выберите любые 2.
                 </div>
@@ -79,12 +83,12 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse2">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapse2">
                         Хороший электромонтаж
                     </a>
                 </h4>
             </div>
-            <div style="height: 0px;" id="collapse2" class="panel-collapse collapse">
+            <div id="collapse2" class="panel-collapse collapse">
                 <div class="panel-body">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit,
                     sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -96,12 +100,12 @@
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
-                    <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapse3">
+                    <a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
                         Какая-то хрень на эльфийском...
                     </a>
                 </h4>
             </div>
-            <div style="height: 0px;" id="collapse3" class="panel-collapse collapse">
+            <div id="collapse3" class="panel-collapse collapse">
                 <div class="panel-body">
                     Galadriel: I amar prestar aen, han mathon ne nen, han mathon ne chae a han noston ne 'wilith.
                 </div>
@@ -127,7 +131,7 @@
 
 <!-- Visual Studio Browser Link -->
 <script type="application/json" id="__browserLink_initializationData">
-    {"appName":"Firefox","requestId":"ae415f7093ec4be08104aaccd46ca5b3"}
+    {"appName":"Firefox","requestId":"cb1927de59a249aeb27dc1b5bf14c22f"}
 </script>
 <script type="text/javascript" src="Home%20Page_files/browserLink" async="async"></script>
 <!-- End Browser Link -->
